backends/c/tests/output/my_header.h

typedef enum my_library_enumdocumented
    {
    MY_LIBRARY_ENUMDOCUMENTED_A = 0,
    MY_LIBRARY_ENUMDOCUMENTED_B = 1,
    MY_LIBRARY_ENUMDOCUMENTED_C = 2,
    } my_library_enumdocumented;
typedef struct my_library_simpleservice my_library_simpleservice;
typedef enum my_library_ffierror
    {
    MY_LIBRARY_FFIERROR_OK = 0,
    MY_LIBRARY_FFIERROR_NULL = 100,
    MY_LIBRARY_FFIERROR_PANIC = 200,
    MY_LIBRARY_FFIERROR_FAIL = 300,
    } my_library_ffierror;
typedef struct my_library_inner
    {
    float x;
    } my_library_inner;
typedef struct my_library_structdocumented
    {
    float x;
    } my_library_structdocumented;
typedef struct my_library_tupled
    {
    uint8_t x0;
    } my_library_tupled;
typedef struct my_library_vec3f32
    {
    float x;
    float y;
    float z;
    } my_library_vec3f32;
typedef uint8_t (*my_library_fptr_fn_u8_rval_u8)(uint8_t x0);
typedef uint32_t (*my_library_fptr_fn_u32_rval_u32)(uint32_t x0);
typedef struct my_library_slicebool
    {
    uint8_t* data;
    uint64_t len;
    } my_library_slicebool;
typedef struct my_library_sliceu8
    {
    uint8_t* data;
    uint64_t len;
    } my_library_sliceu8;
typedef struct my_library_slicemutu8
    {
    uint8_t* data;
    uint64_t len;
    } my_library_slicemutu8;
typedef struct my_library_optioninner
    {
    my_library_inner t;
    uint8_t is_some;
    } my_library_optioninner;
typedef struct my_library_myapiv1
    {
    my_library_fptr_fn_pmut_i64_rval_bool ref_mut_option;
    my_library_fptr_fn_Tupled_rval_Tupled tupled;
    } my_library_myapiv1;
typedef uint8_t (*my_library_fptr_fn_Sliceu8_rval_u8)(my_library_sliceu8 x0);
typedef my_library_vec3f32 (*my_library_fptr_fn_SliceVec3f32_rval_Vec3f32)(my_library_slicevec3f32 x0);
bool ref_mut_option(int64_t* x);
my_library_tupled tupled(my_library_tupled x);
uint8_t callback(my_library_fptr_fn_u8_rval_u8 callback, uint8_t value);
my_library_enumdocumented documented(my_library_structdocumented _x);
uint8_t pattern_ffi_slice_delegate(my_library_fptr_fn_Sliceu8_rval_u8 callback);
my_library_vec3f32 pattern_ffi_slice_delegate_huge(my_library_fptr_fn_SliceVec3f32_rval_Vec3f32 callback);
my_library_optioninner pattern_ffi_option_1(my_library_optioninner ffi_slice);
my_library_inner pattern_ffi_option_2(my_library_optioninner ffi_slice);
uint8_t pattern_ffi_bool(uint8_t ffi_bool);
void pattern_my_api_init_v1(my_library_myapiv1* api);
uint64_t pattern_api_guard();
uint32_t pattern_callback_1(my_library_fptr_fn_u32_rval_u32 callback, uint32_t x);
my_library_ffierror simple_service_destroy(my_library_simpleservice** context);
my_library_ffierror simple_service_new_with(my_library_simpleservice** context, uint32_t some_value);
my_library_ffierror simple_service_new_without(my_library_simpleservice** context);
my_library_ffierror simple_service_new_failing(my_library_simpleservice** context, uint8_t _some_value);
my_library_ffierror simple_service_method_result(my_library_simpleservice* context, uint32_t _anon1);
uint32_t simple_service_method_value(my_library_simpleservice* context, uint32_t x);
void simple_service_method_void(my_library_simpleservice* context);
uint8_t simple_service_method_mut_self(my_library_simpleservice* context, my_library_sliceu8 slice);
void simple_service_method_mut_self_void(my_library_simpleservice* context, my_library_slicebool _slice);
uint8_t simple_service_method_mut_self_ref(my_library_simpleservice* context, uint8_t* x, uint8_t* _y);
uint8_t simple_service_method_mut_self_ref_slice(my_library_simpleservice* context, uint8_t* x, uint8_t* _y, my_library_sliceu8 _slice);
uint8_t simple_service_method_mut_self_ref_slice_limited(my_library_simpleservice* context, uint8_t* x, uint8_t* _y, my_library_sliceu8 _slice, my_library_sliceu8 _slice2);
my_library_ffierror simple_service_method_mut_self_ffi_error(my_library_simpleservice* context, my_library_slicemutu8 _slice);